namespace/openbao/openbao/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openbao-https
  namespace: openbao
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openbao.oglesby.io`)
      kind: Rule
      services:
        - name: openbao
          port: 8200
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openbao-http
  namespace: openbao
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`openbao.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: openbao
          port: 8200
